# Ramanujan

./: .gitignore  LICENSE  README.md  dockerfile  install_ramanujan.sh  projectBuilder.sh  runJvmInDocker.sh
.github/: copilot-instructions.md
androidapp/: settings.gradle.kts
androidapp/app/: build.gradle.kts
androidapp/app/src/main/: AndroidManifest.xml
androidapp/app/src/main/res/layout/: activity_main.xml
androidapp/app/src/main/res/values/: strings.xml  themes.xml
androidapp/app/src/main/res/values-night/: themes.xml
commons/: .gitignore  pom.xml
commons/src/main/java/in/ramanujan/debugger/: UserReadableDebugPoint.java
commons/src/main/java/in/ramanujan/enums/: ConditionType.java  DataType.java  OperatorType.java
commons/src/main/java/in/ramanujan/pojo/: ContextStack.java  RuleEngineInput.java  RuleEngineInputUnits.java
commons/src/main/java/in/ramanujan/utils/: ArrayUtils.java  Constants.java
db-layer/: .gitignore  pom.xml
db-layer/src/main/resources/: arrayIdNameMap  arrayMapping.sql  arrayMappingDagElementId.sql  arrayUpdationLog.sql  asyncTaskMiddleware.sql  asyncTaskOrchestrator.sql  availabeHost.sql  dagElement.sql  dagElementCheckpoint.sql  dagElementMetadata.sql  dagElementOrchestratorAsyncId.sql  dagElementRelationship.sql  hostMapping.sql  orchestratorCallLocker.sql  orchestratorMiddlewareMapping.sql  variableMapping.sql  variableMappingDagElementid.sql
developer-console/: .gitignore  pom.xml
developer-console-model/: .gitignore  pom.xml
diagrams/: OverviewRequestFlowDevConsole.puml  OverviewRequestFlowMiddleware.puml  OverviewRequestFlowOrchestrator.puml
kafka-manager/: dockerfile  pom.xml
kafka-manager/base/: pom.xml
kafka-manager/data/: pom.xml
kafka-manager/rest/: pom.xml
kafka-manager/service/: pom.xml
middleware/: .gitignore  dockerfile  pom.xml
middleware/base/: pom.xml
middleware/data/: pom.xml
middleware/rest/: pom.xml
middleware/service/: pom.xml
middleware/translation/: PYTHON_SUPPORT.md  pom.xml
middleware/translation/src/main/antlr4/: Python3Lexer.g4  Python3Parser.g4
monitoring-utils2/: .gitignore  pom.xml
orchestrator/: dockerfile  pom.xml
orchestrator/base/: pom.xml
orchestrator/data/: pom.xml
orchestrator/rest/: pom.xml
orchestrator/service/: pom.xml
prayog/: .gitignore  dockerBuilder.sh  dockerfile  pom.xml
prayog/base/: pom.xml
prayog/data/: pom.xml
prayog/rest/: pom.xml
prayog/rest/src/main/resources/: libnative.dylib
prayog/service/: pom.xml
ramanujan-device-common/: pom.xml
ramanujan-native/: .gitignore
ramanujan-native/native/: CMakeLists.txt  NativeProcessor.cpp  buildDependencyAndroid.sh  compileAndroid.sh  in_ramanujan_rule_engine_NativeProcessor.h
ramanujan-native/native/input/: Array.cpp  Array.hpp  ArrayCommand.hpp  Command.cpp  Command.hpp  Condition.cpp  Condition.hpp  Constant.cpp  Constant.hpp  FunctionCall.cpp  FunctionCall.hpp  If.cpp  If.hpp  Operation.cpp  Operation.hpp  RedefineArrayCommand.hpp  RuleEngineInput.hpp  RuleEngineInputUnit.hpp  Variable.cpp  Variable.hpp  While.cpp  While.hpp
ramanujan-native/native/processing/: DebugPoint.cpp  DebugPoint.h  ProcessingResult.cpp  ProcessingResult.hpp  Processor.cpp  Processor.hpp
ramanujan-native/native/processing/conditionFunctioning/: AndImpl.h  CachedConditionFunctioning.h  ConditionFunctioning.h  GreaterThanEqualToImpl.h  GreaterThanImpl.h  IsEqualImpl.h  LessThanEqualToImpl.h  LessThanImpl.h  NotEqualImpl.h  NotImpl.h  OrImpl.h
ramanujan-native/native/processing/operatorFunctioning/: AddImpl.h  AssignImpl.h  CachedOperationFunctioning.h  DivideImpl.h  MinusImpl.h  MultiplyImpl.h  OperationFunctioning.h
ramanujan-native/native/ruleEngineObject/: ArrayCommandRE.h  CommandProcessing.cpp  CommandProcessing.h  CommandRE.cpp  CommandRE.h  CommandTypeProcessingDefinition.h  ConditionRE.cpp  ConditionRE.h  ConstantRE.h  DataOperation.h  DefaultRuleEngineUnits.h  FunctionCallRE.h  FunctionCommandRE.cpp  FunctionCommandRE.h  IfRE.h  OperationRE.cpp  OperationRE.h  RedefineArrayCommandRE.cpp  RedefineArrayCommandRE.h  RuleEngineInputUnits.hpp  Test.cpp  WhileRE.h
ramanujan-native/native/ruleEngineObject/dataContainer/: AbstractDataContainer.h  ArrayRE.cpp  ArrayRE.h  DataContainerRE.h  DataContainerValue.h  DataContainerValueFunctionCommandRE.h  EquationBasedDataOperation.cpp  EquationBasedDataOperation.h  VaraiableRE.cpp  VariableRE.h
ramanujan-native/native/ruleEngineObject/dataContainer/array/: ArrayValDataContainer.h  ArrayValue.cpp  ArrayValue.h
ramanujan-native/native/ruleEngineObject/datastructure/: BooleanWrapper.h  DoubleWrapper.h
ramanujan-native/native/ruleEngineObject/processingDefinition/: ConditionReProcessing.h  ConstantReProcessing.h  DefaultProcessing.h  FunctionReProcessing.h  IfReProcessing.h  OperationReProcessing.h  RedefineArrayCommandReProcessing.h  VariableReProcessing.h  WhileReProcessing.h
ramanujan-test-codes/: .random.swp  linearRegression  linearRegression2  linearRegression3  linearRegression4  psoLinearRegression  psoLinearRegressionDebug  psoLinearRegressionDebugArray  psoLinearRegressionDebugArrayNew  random
ramanujan-test-codes/SwarmOptimizers/: GWO.rj  WOA
ramanujan-test-codes/csv/: csv  psoLinearRegressionDebug
ramanujan-test-codes/package/: .build.json.swo  .build.json.swp  functions  psoLinearRegressionDebug
ramanujan-test-codes/python-examples/: simple.py
rule-engine/: .gitignore  pom.xml
rule-engine/src/main/resources/: compileAndroid.sh
webapp/: .gitignore  Dockerfile  README_NEW.md  build.sh  docker-compose.yml  init.sql  nginx.conf  setup.sh
webapp/backend/: server.js
webapp/public/: index.html
webapp/src/: App.js  index.js  theme.js
webapp/src/components/: CodeEditor.js  FileUpload.js  LanguageConstructs.js  Layout.js  TaskStatusCard.js
webapp/src/context/: AuthContext.js
webapp/src/pages/: Dashboard.js  JobStatus.js  JobSubmit.js  LandingPage.js  LoginPage.js
webapp/src/services/: apiService.js
(+633 files in other folders)
